--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "@types/node": "^12.12.30",
     "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/redux-thunk": "^2.1.0",
     "axios": "^0.19.2",
+    "combine-reducers": "^1.0.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
+    "react-combine-reducers": "^1.0.3",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
