--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-combine-reducers": "^1.0.3",
+    "react-devtools": "^4.5.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
