--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-slick": "^0.23.4",
     "@types/redux-thunk": "^2.1.0",
     "axios": "^0.19.2",
     "combine-reducers": "^1.0.0",
@@ -26,6 +27,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-slick": "^0.25.2",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.7.5"
   },
