--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.0.1",
     "axios": "^0.19.2",
     "combine-reducers": "^1.0.0",
     "node-sass": "^4.13.1",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
