--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "latest",
     "react": "^16.13.0",
     "react-combine-reducers": "^1.0.3",
+    "react-day-picker": "^7.4.5",
     "react-devtools": "^4.5.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
