--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-day-picker": "^7.4.5",
     "react-devtools": "^4.5.0",
     "react-dom": "^16.13.0",
+    "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
