--- a/package.json
+++ b/package.json
@@ -6,29 +6,13 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.7",
     "@material-ui/styles": "^4.9.6",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.30",
-    "@types/react": "^16.9.23",
-    "@types/react-burger-menu": "^2.6.1",
-    "@types/react-dom": "^16.9.5",
-    "@types/react-redux": "^7.1.7",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/react-slick": "^0.23.4",
-    "@types/redux-thunk": "^2.1.0",
-    "@types/styled-components": "^5.0.1",
     "axios": "^0.19.2",
     "combine-reducers": "^1.0.0",
     "moment": "^2.24.0",
-    "node-sass": "^4.13.1",
     "prop-types": "latest",
     "react": "^16.13.0",
     "react-combine-reducers": "^1.0.3",
     "react-day-picker": "^7.4.5",
-    "react-devtools": "^4.5.0",
     "react-dom": "^16.13.0",
     "react-paginate": "^6.3.2",
     "react-redux": "^7.2.0",
@@ -62,5 +46,22 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "node-sass": "^4.13.1",
+    "react-devtools": "^4.5.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^12.12.30",
+    "@types/react": "^16.9.23",
+    "@types/react-burger-menu": "^2.6.1",
+    "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/react-slick": "^0.23.4",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.0.1"
+  }
 }
